Bug 377106 - "Waiting for disc" dialog layout is broken
Summary: "Waiting for disc" dialog layout is broken
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: GUI/Usability (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-02 14:24 UTC by Patrick Silva
Modified: 2017-03-06 08:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (130.89 KB, image/png)
2017-03-02 14:24 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-03-02 14:24:00 UTC
Created attachment 104318 [details]
screenshot

Big empty space around the icon.
See the screenshot please.
Comment 1 Leslie Zhai 2017-03-06 08:40:31 UTC
Git commit 02cf306145f2adda68e87a34f94cb99abe88ea40 by Leslie Zhai.
Committed on 06/03/2017 at 08:40.
Pushed by lesliezhai into branch 'master'.

Fix Waiting for disc dialog layout broken issue

M  +11   -11   src/k3bemptydiscwaiter.cpp

https://commits.kde.org/k3b/02cf306145f2adda68e87a34f94cb99abe88ea40