Fix Waiting for disc dialog layout broken issue

BUG: 377106